--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "web.js",
   "scripts": {
     "startDev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "service-worker": "https://js.pusher.com/beams/service-worker.js"
   },
   "engines": {
     "node": "18.x"
