--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "helmet": "^6.0.1",
     "joi": "^17.7.0",
     "joi-password": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.8.3",
+    "morgan": "^1.10.0",
     "node": "^16.13.2",
     "path": "^0.12.7",
     "winston": "^3.8.2",
